header/home started

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,16 +1,16 @@
 header.header
   .container    
-    img.header__logo.logo(src=require("../../../images/logo-com-letras.svg"), alt="oliveira") 
+    img.header__logo.logo(src=require("../../../images/logo_eformaliza.svg"), alt="eformaliza")
     nav.header__nav 
       ul.header__list 
         li.header__item
           a(href="./index.html#home") Home
         li.header__item
-          a(href="./index.html#servicos") Serviços
+          a(href="./index.html#servicos") Criamos
         li.header__item
-          a(href="./index.html#obras") Obras
+          a(href="./index.html#obras") Promovemos
         li.header__item
-          a(href="./index.html#opinions") Opiniões
+          a(href="./index.html#opinions") Redes
         li.header__item  
           a(href="./index.html#contacts") Contatos
     nav.header__nav_burger
