--- a/src/index.pug
+++ b/src/index.pug
@@ -7,13 +7,13 @@ html(lang="en")
     //- meta(name="description" content="Data Warehouse is a data storage area that has been tested for security, so you can store your data here safely but not be afraid of being stolen by others." )
     //- meta(name="keywords" content="warehouse, save, data, security, storage, area" )
     //- link(rel="icon" href="favicon.ico" type="image/x-icon")
-    title Oliveira Serviços
+    title Eformaliza
   body
     include components/header/header
     include components/home/home
     //- include components/product/product
     include components/services/services 
-    include components/obras/obras 
-    include components/opinions/opinions 
-    include components/footer/footer
+    //- include components/obras/obras 
+    //- include components/opinions/opinions 
+    //- include components/footer/footer
     
