--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,11 +7,12 @@ $colorDarkRed: #ce4809;
 $colorGrey: #808080;
 $colorGreyTransp: rgba(128, 128, 128, 0.61);
 $colorDarkRed05: rgba(206, 71, 9, 0.05);
+$colorViolet087: rgba(82, 32, 110, 0.87);
 
 //colors dynamic
 
 $colorPrimary: $colorLightGrey;
-$colorSecondary: $colorGreyTransp;
+$colorSecondary: $colorViolet087;
 $colorTertiary: $colorDarkRed;
 $colorFont: $colorBlack;
 
