--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -9,7 +9,7 @@ body.lock {
   display: block;
   position: fixed;
   width: 100%;
-  background-color: $colorSecondary;
+  // background-color: $colorSecondary;
   text-align: center;
   z-index: 300;
 
@@ -17,9 +17,13 @@ body.lock {
     transition: all 0.8s linear 0.05s;
     float: left;
     display: block;
-    height: 155px;
+    height: 180px;
     padding: 0 0 15px;
     margin-right: 40px;
+    // border: 1px solid white;
+  }
+  img.header__logo_scroll {
+    display: none;
   }
 
   &__nav {
@@ -27,9 +31,24 @@ body.lock {
     margin: auto;
     transform: translateY(70px);
     transition: all 0.8s linear 0.05s;
-    font-size: 1.3em;
+    font-size: 1.4em;
     line-height: 0.7em;
     font-family: $font-family-subtitle, sans-serif;
+  }
+  &__nav::before {
+    content: "";
+    color: #fff;
+    display: block;
+    background-image: url("/images/logo_without_letters.svg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100px;
+    top: -10px;
+    height: 60px;
+    position: absolute;
+    opacity: 0;
+    transition: all 0.8s linear 0.05s;
   }
 
   &__list {
@@ -39,10 +58,11 @@ body.lock {
 
   &__item {
     flex: 0 0 12%;
-    border-radius: 20px;
-    background-color: $colorTertiary;
+    // background-color: $colorTertiary;
     padding: 3px;
     transition: all 0.3s linear 0.1s;
+    // border: 1px solid white;
+    // border-radius: 20px;
 
     a {
       text-transform: uppercase;
@@ -54,10 +74,13 @@ body.lock {
   }
 
   &__item:hover {
-    box-shadow: 0 0px 3px $colorTertiary, 0 0px 5px white;
     transform: scale(1.02);
     text-shadow: 0 0 2px white;
     transition: all 0.3s linear 0.1s;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+    // border-radius: 20px;
+    // box-shadow: 0 0px 3px $colorTertiary, 0 0px 5px white;
   }
 
   &__nav_burger {
@@ -103,20 +126,26 @@ body.lock {
 }
 
 .scroll.header {
+  background-color: $colorSecondary;
   transition: all 0.8s linear 0.05s;
   position: fixed;
   width: 100%;
   z-index: 300;
   img.logo.scroll {
     transition: all 0.8s linear 0.05s;
-    height: 100px;
+    opacity: 0;
+    height: 60px;
     padding: 0 0 7px;
   }
 
   &__nav {
     transition: all 0.8s linear 0.05s;
-    transform: translateY(38px);
-    font-size: 1.2em;
+    transform: translateY(15px);
+    // font-size: 1.3em;
+  }
+  &__nav::before {
+    opacity: 1;
+    transition: all 0.8s linear 0.05s;
   }
 }
 
