--- a/src/components/home/home.pug
+++ b/src/components/home/home.pug
@@ -1,4 +1,4 @@
 .home#home
   .container 
     .home__box 
-      p.home__description Oliveira Serviços Engenharia Oliveira Serviços Engenharia Oliveira Serviços Engenharia Oliveira Serviços Engenharia Oliveira Serviços Engenharia Oliveira Serviços Engenharia Oliveira Serviços Engenharia Oliveira Serviços Engenharia Oliveira Serviços Engenharia Oliveira Serviços Engenharia
+      p.home__description Criamos sites modernos 
