--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables";
 
 .home {
-  background-image: url("../../images/banner-principal_light.png");
+  background-image: url("../../images/bg_eformaliza.png");
   background-position: center;
   background-size: cover;
   background-repeat: repeat-x;
@@ -11,7 +11,7 @@
     padding: 400px 40px 0;
     max-width: 100%;
     height: 100vh;
-    color: $colorTertiary;
+    color: white;
     font-size: 2.4em;
     font-family: $font-family-title, sans-serif;
     font-weight: 700;
