--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,6 +1,6 @@
 header.header
   .container    
-    img.header__logo.logo(src=require("../../../images/logo_eformaliza.svg"), alt="eformaliza")
+    img.header__logo.logo(src=require("../../../images/logo_eformaliza_red_black.svg"), alt="eformaliza")
     nav.header__nav 
       ul.header__list 
         li.header__item
@@ -10,7 +10,9 @@ header.header
         li.header__item
           a(href="./index.html#obras") Promovemos
         li.header__item
-          a(href="./index.html#opinions") Redes
+          a(href="./index.html#opinions") Blog
+        li.header__item
+          a(href="./index.html#opinions") FAQ
         li.header__item  
           a(href="./index.html#contacts") Contatos
     nav.header__nav_burger
