--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,7 +12,7 @@ $colorViolet087: rgba(82, 32, 110, 0.87);
 //colors dynamic
 
 $colorPrimary: $colorLightGrey;
-$colorSecondary: $colorViolet087;
+$colorSecondary: $colorGreyTransp;
 $colorTertiary: $colorDarkRed;
 $colorFont: $colorBlack;
 
