first edition home design

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -21,6 +21,8 @@ body.lock {
     padding: 0 0 15px;
     margin-right: 40px;
     // border: 1px solid white;
+    z-index: 151;
+    position: relative;
   }
   img.header__logo_scroll {
     display: none;
@@ -58,19 +60,13 @@ body.lock {
 
   &__item {
     flex: 0 0 12%;
-    // background-color: $colorTertiary;
     padding: 3px;
     transition: all 0.3s linear 0.1s;
-    // border: 1px solid white;
-    // border-radius: 20px;
-
-    a {
-      text-transform: uppercase;
-      display: block;
-      color: white;
-      letter-spacing: 0.05em;
-      padding: 5px;
-    }
+    text-transform: uppercase;
+    display: block;
+    color: white;
+    letter-spacing: 0.05em;
+    padding: 5px;
   }
 
   &__item:hover {
