--- a/src/components/home/home.pug
+++ b/src/components/home/home.pug
@@ -1,4 +1,12 @@
 .home#home
   .container 
-    .home__box 
-      p.home__description Criamos sites modernos
+    .home__box
+      .home__about
+        p.home__title.title Criamos sites modernos
+        ul.home__list
+          li CRIAMOS SITES PROFISSIONAIS PARA VOCÊ
+          li PREPARAMOS DESIGN DEDICADO
+          li GARANTIA DE 03 MESES
+          li AVALIAÇÃO INDIVIDUAL SEM GRATUITA
+      .home__video 
+        iframe(width="713" height="410" src="https://www.youtube.com/embed/T-FT3MBubbk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
