--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,15 +1,13 @@
 footer.footer#contacts
   .container 
-    .footer__logo
-      img.logo.footer__img(src=require("../../../images/logo-com-letras.svg"), alt="logo")
-    .footer__title.sectionTitle Contatos
+    p.footer__title.title Contatos
     .footer__row
       .footer__item
         img(src=require("../../../images/icons/whatsapp.svg"), alt="whatsapp")
-        p 21-96897-3060
+        p 21-99177-5816
       .footer__item
         img(src=require("../../../images/icons/email.svg"), alt="email")
-        p oliveiraservicos@gmail.com
+        p eformaliza@gmail.com
       a.footer__item(href= "https://www.instagram.com/") 
         img(src=require("../../../images/icons/instagram.svg"), alt="instagram")
         p instagram
