--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,28 +1,54 @@
 @import "../../styles/variables";
 
 .home {
-  background-image: url("../../images/fundo_preto.svg");
+  background-image: url("../../images/fundo_leve1.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: repeat-x;
-  // background-color: black;
 
   &__box {
-    text-align: center;
-    padding: 400px 40px 0;
+    padding-top: 160px;
     max-width: 100%;
     height: 100vh;
     color: white;
-    font-size: 2.4em;
+    font-size: 2em;
     font-family: $font-family-title, sans-serif;
     font-weight: 700;
-    text-shadow: 0 0 5px $colorPrimary;
     line-height: 1.5em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
-  &__description {
-    background-color: $colorSecondary;
-    border-radius: 8px;
+  &__about {
+    flex: 0 1 40%;
+    padding: 0 30px;
+  }
+
+  &__list {
+    li {
+      font-size: 0.8em;
+      text-transform: lowercase;
+      text-align: center;
+      font-family: $font-family-subtitle;
+      font-weight: 400;
+      line-height: 2em;
+    }
+
+    li::before {
+      content: "- ";
+    }
+  }
+  &__video {
+    flex: 0 1 60%;
+    padding: 0 30px;
+  }
+  iframe {
+    border-radius: 10px;
+  }
+
+  iframe:hover {
+    box-shadow: 0 0 10px red;
   }
 }
 
