--- a/src/index.pug
+++ b/src/index.pug
@@ -11,9 +11,13 @@ html(lang="en")
   body
     include components/header/header
     include components/home/home
+    include components/ask/ask
+    include components/discount/discount
+    include components/footer/footer
     //- include components/product/product
-    include components/services/services 
+    //- include components/services/services 
     //- include components/obras/obras 
     //- include components/opinions/opinions 
-    //- include components/footer/footer
+    //- include components/goal/goal
+   
     
