first edition home full

--- a/src/components/discount/discount.pug
+++ b/src/components/discount/discount.pug
@@ -1,6 +1,8 @@
 .discount
   .container
     p.discount__title.title Atenção!!!
+    .discount__image 
+      img(src=require("../../../images/fire.png"), alt="sale")
     .discount__timer.timer
       p.timer__text até o dia 31 de maio lhe damos um desconto promocional 20% para nossos serviços
       p.timer__time 21:13:33
