--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -2,12 +2,13 @@
 
 .footer {
   color: #fff;
-  background-color: $colorSecondary;
+  background-color: $colorBlack;
   padding: 15px 0;
   position: relative;
 
   &__title {
-    font-size: 2em;
+    border: none;
+    box-shadow: none;
   }
 
   &__row {
@@ -31,6 +32,7 @@
 
     img {
       background-color: rgba(189, 30, 30, 0.705);
+      box-shadow: 0 0 4px red;
       border-radius: 50%;
       height: 70%;
       margin-right: 15px;
