--- a/src/components/home/home.pug
+++ b/src/components/home/home.pug
@@ -9,4 +9,4 @@
           li GARANTIA DE 03 MESES
           li AVALIAÇÃO INDIVIDUAL SEM GRATUITA
       .home__video 
-        iframe(width="713" height="410" src="https://www.youtube.com/embed/T-FT3MBubbk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+        iframe(width="840" height="480" src="https://www.youtube.com/embed/9LySJWfskT4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
