--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,7 +4,7 @@
 @use "../components/home/home";
 @use "../components/ask/ask";
 @use "../components/discount/discount";
-
+@use "../components/goal/goal";
 @use "../components/services/services";
 @use "../components/opinions/opinions";
 @use "../components/obras/obras";
