--- a/src/components/goal/goal.pug
+++ b/src/components/goal/goal.pug
@@ -1,3 +1,17 @@
 .goal
-  .container 
+  .container
+    .goal__wrapper
+      .goal__image
+        img(src=require("../../../images/laptop.png"), alt="why")
+      .goal__box
+        .goal__content
+          p.goal__question PORQUE É TÃO IMPORTANTE TER UM SITE ?
+          p.goal__answer Um site é a melhor vitrine para seu negócio online
+        .goal__content
+          p.goal__question PORQUE VOCÊ DEVE APOSTAR EM NÓS ?
+          p.goal__answer Na E-formaliza, projetamos e criamos sites baseados em tecnologias comprovadas. A criação de sites na E-formaliza é a garantia de trabalho de desenvolvimento de qualidade.
+      
+
+
+    
     
