--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -11,7 +11,7 @@
     max-width: 100%;
     height: 100vh;
     color: white;
-    font-size: 2em;
+    font-size: 1em;
     font-family: $font-family-title, sans-serif;
     font-weight: 700;
     line-height: 1.5em;
@@ -27,7 +27,7 @@
 
   &__list {
     li {
-      font-size: 0.8em;
+      font-size: 1.7em;
       text-transform: lowercase;
       text-align: center;
       font-family: $font-family-subtitle;
@@ -42,13 +42,18 @@
   &__video {
     flex: 0 1 60%;
     padding: 0 30px;
-  }
-  iframe {
-    border-radius: 10px;
-  }
+    display: flex;
+    align-items: center;
 
-  iframe:hover {
-    box-shadow: 0 0 10px red;
+    iframe {
+      border-radius: 10px;
+      width: 100%;
+    }
+
+    iframe:hover {
+      border: 1px solid red;
+      box-shadow: 0 0 10px red;
+    }
   }
 }
 
