--- a/src/index.pug
+++ b/src/index.pug
@@ -11,8 +11,9 @@ html(lang="en")
   body
     include components/header/header
     include components/home/home
-    include components/ask/ask
+    include components/goal/goal
     include components/discount/discount
+    include components/ask/ask
     include components/footer/footer
     //- include components/product/product
     //- include components/services/services 
