--- a/src/styles/_container.scss
+++ b/src/styles/_container.scss
@@ -19,4 +19,7 @@
   font-family: $font-family-title, sans-serif;
   font-weight: 700;
   letter-spacing: 0.07em;
+  font-size: 2em;
+  border: 1px solid rgb(129, 7, 7);
+  box-shadow: 0 0 5px rgb(129, 7, 7);
 }
