added favicon, Offers; modified Home, Goal

--- a/src/components/ask/ask.pug
+++ b/src/components/ask/ask.pug
@@ -1,4 +1,4 @@
-.ask
+.ask#ask
   .container
     p.ask__title.title SOLICITE UMA CONVERSA SEM COMPROMISSo:
     .ask__box  
@@ -8,7 +8,7 @@
         .form__input 
           input(type="text" placeholder="name" name="name")
         .form__label
-          label(for="name") Seu telefono
+          label(for="name") Seu telefone
         .form__input
           input(type="phone" placeholder="phone" name="phone")
         .form__label
