--- a/src/components/discount/discount.pug
+++ b/src/components/discount/discount.pug
@@ -4,5 +4,5 @@
     .discount__image 
       img(src=require("../../../images/fire.png"), alt="sale")
     .discount__timer.timer
-      p.timer__text até o dia 31 de maio lhe damos um desconto promocional 20% para nossos serviços
-      p.timer__time 21:13:33
+      p.timer__text até o dia 31 de maio MAIO GANHE UM DESCONTO PROMOCIONAL de 20% para nossos serviços
+      p.timer__time 21:13:32
