--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,7 +9,7 @@
 @use "../components/opinions/opinions";
 @use "../components/obras/obras";
 @use "../components/product/product";
-
+@use "../components/offers/offers";
 @use "../components/footer/footer";
 
 //import fonts and variables
