--- a/src/components/goal/goal.pug
+++ b/src/components/goal/goal.pug
@@ -5,11 +5,11 @@
         img(src=require("../../../images/laptop.png"), alt="why")
       .goal__box
         .goal__content
-          p.goal__question PORQUE É TÃO IMPORTANTE TER UM SITE ?
+          p.goal__question POR QUE É TÃO IMPORTANTE TER UM SITE ?
           p.goal__answer Um site é a melhor vitrine para seu negócio online
         .goal__content
-          p.goal__question PORQUE VOCÊ DEVE APOSTAR EM NÓS ?
-          p.goal__answer Na E-formaliza, projetamos e criamos sites baseados em tecnologias comprovadas. A criação de sites na E-formaliza é a garantia de trabalho de desenvolvimento de qualidade.
+          p.goal__question POR QUE VOCÊ DEVE APOSTAR EM NÓS ?
+          p.goal__answer Na e-Formaliza, projetamos e criamos sites baseados em tecnologias comprovadas. A desenvolver sites na e-Formaliza é a garantia de um trabalho com qualidade
       
 
 
