--- a/src/components/goal/goal.scss
+++ b/src/components/goal/goal.scss
@@ -17,7 +17,7 @@
   }
 
   &__image {
-    flex: 0 1 40%;
+    flex: 0 1 50%;
     padding: 20px;
     display: flex;
     align-items: center;
@@ -31,7 +31,7 @@
   }
 
   &__box {
-    flex: 0 1 60%;
+    flex: 0 1 50%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -49,18 +49,19 @@
     justify-content: space-between;
     background-color: $colorBlack;
     margin-bottom: 20px;
+    font-size: 0.8em;
   }
 
   &__question {
-    margin: 0 0 10px 0;
     text-align: left;
   }
 
   &__answer {
     text-align: left;
-    text-transform: lowercase;
+    text-transform: none;
+    text-align: left;
     text-shadow: none;
-    font-weight: 500;
+    font-weight: 400;
     letter-spacing: 0.05em;
     width: 90%;
     margin: 20px 0 0 auto;
