--- a/src/components/home/home.pug
+++ b/src/components/home/home.pug
@@ -1,12 +1,16 @@
 .home#home
   .container 
     .home__box
-      .home__about
-        p.home__title.title Criamos sites modernos
-        ul.home__list
-          li CRIAMOS SITES PROFISSIONAIS PARA VOCÊ
-          li PREPARAMOS DESIGN DEDICADO
-          li GARANTIA DE 03 MESES
-          li AVALIAÇÃO INDIVIDUAL SEM GRATUITA
-      .home__video 
-        iframe(width="840" height="480" src="https://www.youtube.com/embed/9LySJWfskT4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+      a.home__greetings.title(href="#ask") 
+        h1 Dê o primeiro passo !
+        h1 A concorrência já está online e você ?
+      .home__row 
+        .home__column
+          p.home__title Criamos sites modernos
+          ul.home__list
+            li Criamos sites profissionais 
+            li Preparamos design exclusivo
+            li Garantia de 03 meses
+            li Avaliação individual gratuita
+        .home__column
+          iframe.home__video(width="840" height="480" src="https://www.youtube.com/embed/9LySJWfskT4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
