--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -7,8 +7,8 @@ header.header
         a.header__item(href="index.html") Home
         a.header__item(href="criamos.html") Criamos      
         a.header__item(href="promovemos.html") Promovemos
-        a.header__item(href="./index.html#opinions") Blog
-        a.header__item(href="./index.html#opinions") FAQ
-        a.header__item(href="./index.html#contacts") Contatos
+        a.header__item(href="./index.html") Blog
+        a.header__item(href="./index.html") FAQ
+        a.header__item(href="#contacts") Contatos
     nav.header__nav_burger
       .burger__inner  
