--- a/src/components/home/home.pug
+++ b/src/components/home/home.pug
@@ -1,9 +1,8 @@
 .home#home
   .container 
     .home__box
-      a.home__greetings.title(href="#ask") 
-        h1 Dê o primeiro passo !
-        h1 A concorrência já está online e você ?
+      .home__greetings.title  
+        p Pensou em sites ? Pensou e-Formaliza 
       .home__row 
         .home__column
           p.home__title Criamos sites modernos
