--- a/src/components/offers/offers.pug
+++ b/src/components/offers/offers.pug
@@ -8,7 +8,7 @@
           .offer__description 
             p Você indica nós ao seu amigo e ganham 10% de desconto em todos os serviços do site !
         li.offers__item.offer
-          button.offer__btn.active(type="button") Seu Manutenção Gratis
+          button.offer__btn(type="button") Seu Manutenção Gratis
           .offer__description 
             p Contrate nossos serviços de desenvolvimento ate o dia 31 de maio e ganhe 06 meses de manutenção gratis !
         li.offers__item.offer
