--- a/src/components/discount/discount.scss
+++ b/src/components/discount/discount.scss
@@ -11,12 +11,12 @@
 
   &__title {
     margin: 90px auto 0;
-    font-size: 3.8em;
+    font-size: 3.2em;
   }
 
   &__image {
-    width: 150px;
-    margin: 80px auto 0;
+    width: 165px;
+    margin: 60px auto 0;
 
     img {
       width: 100%;
@@ -25,26 +25,52 @@
 }
 
 .timer {
+  
   color: white;
-  height: 45vh;
+  height: 50vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding-bottom: 50px;
+  letter-spacing: 0.1em;
 
   &__text {
-    letter-spacing: 0.1em;
-    font-size: 20px;
+    
+    line-height: 1.3em;
+    font-size: 2em;
     padding: 20px 0 0;
     text-transform: uppercase;
   }
 
   &__time {
-    letter-spacing: 0.05em;
+    letter-spacing: 0.1em;
     font-size: 80px;
     font-weight: bold;
     padding: 5px 0;
-    margin-top: 30px;
+    margin: 40px 0;
     text-shadow: 0 0 4px white;
+   
   }
+
+  &__title {
+    color:#ffffff;
+    font-size: 2em;
+    text-transform: uppercase;
+    width: fit-content;
+    padding: 7px;
+    margin: 0 auto;
+    transition: all 0.3s linear 0.1s;
+    line-height: 1.3em;
+  }
+
+
+  &__title:hover {
+    text-shadow: 0 0 5px rgb(129, 7, 7);
+    transform: scale(1.05);
+    text-shadow: 0 0 2px white;
+    transition: all 0.3s linear 0.1s;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+  }
+  
 }
