--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -8,9 +8,9 @@ footer.footer#contacts
       .footer__item
         img(src=require("../../../images/icons/email.svg"), alt="email")
         p eformaliza@gmail.com
-      a.footer__item(href= "https://www.instagram.com/") 
+      a.footer__item(href= "https://www.instagram.com/eformaliza/") 
         img(src=require("../../../images/icons/instagram.svg"), alt="instagram")
-        p instagram
+        p @eformaliza
       a.footer__item(href="https://facebook.com") 
         img(src=require("../../../images/icons/facebook.svg"), alt="facebook")
         p facebook
