--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -22,11 +22,6 @@
     line-height: 1.3em;
   }
 
-  &__greetings:hover {
-    box-shadow: 0 0 10px red;
-    border: 1px solid red;
-  }
-
   &__row {
     font-size: 1em;
     font-weight: 700;
@@ -74,8 +69,8 @@
   }
 
   &__video:hover {
-    border: 1px solid red;
-    box-shadow: 0 0 10px red;
+    border: 2px solid rgb(129, 7, 7);
+    box-shadow: 0 0 15px rgb(129, 7, 7);
   }
 }
 
