--- a/src/components/offers/offers.scss
+++ b/src/components/offers/offers.scss
@@ -19,20 +19,23 @@
     flex: 0 1 68%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
   }
 
   &__item {
+    margin: 20px 0;
   }
 
   &__image {
     flex: 0 1 42%;
     overflow: hidden;
     padding: 50px;
+    display: flex;
+    align-items: center;
 
     img {
       width: 100%;
-      height: 100%;
+      height: auto;
     }
   }
 }
@@ -45,15 +48,16 @@
     border: 1px solid white;
     border-radius: 15px;
     margin: 10px 0;
-    font-size: 1em;
+    font-size: 1.2em;
     width: 100%;
     text-align: left;
     position: relative;
-    transition: border-color 0.4s ease-in-out, bottom 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out, bottom 0.4s ease-in-out;
   }
 
   &__btn.active {
     border-radius: 15px 15px 0 0;
+    transition: all 0.4s ease-in-out, bottom 0.4s ease-in-out;
   }
 
   &__btn::after {
@@ -72,21 +76,23 @@
   &__btn.active::after {
     border-color: #fff transparent transparent #fff;
     bottom: 5px;
+    transition: border-color 0.4s ease-in-out, bottom 0.4s ease-in-out;
   }
 
   &__description {
     line-height: 1.3em;
-    background-color: #000;
-    margin-top: -6px;
+    font-size: 1.2em;
+    background-color: #000; 
     border: 1px solid;
-    height: auto;
     overflow: hidden;
-    transition: height 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
     padding: 7px 15px;
     border: 1px solid white;
     border-radius: 0 0 15px 15px;
     z-index: 1;
-    // height: 0;
-    // margin-top: -26px;
+    height: auto;
+    margin-top: -6px;
+    height: 0;
+    margin-top: -26px;
   }
 }
