home first edition modificated

--- a/src/components/ask/ask.pug
+++ b/src/components/ask/ask.pug
@@ -6,11 +6,11 @@
         .form__label
           label(for="name") Seu nome
         .form__input 
-          input(type="text" placeholder="name" name="name")
+          input(type="text" placeholder="nome" name="name")
         .form__label
           label(for="name") Seu telefone
         .form__input
-          input(type="phone" placeholder="phone" name="phone")
+          input(type="phone" placeholder="telefone" name="phone")
         .form__label
           label(for="name") Seu email
         .form__input
