--- a/src/components/ask/ask.scss
+++ b/src/components/ask/ask.scss
@@ -42,7 +42,7 @@
   .form {
     &__label {
       font-size: 0.8em;
-      text-transform: lowercase;
+      // text-transform: lowercase;
       text-align: center;
       font-family: $font-family-subtitle;
       font-weight: 400;
