--- a/src/components/goal/goal.pug
+++ b/src/components/goal/goal.pug
@@ -9,7 +9,7 @@
           p.goal__answer Um site é a melhor vitrine para seu negócio online
         .goal__content
           p.goal__question POR QUE VOCÊ DEVE APOSTAR EM NÓS ?
-          p.goal__answer Na e-Formaliza, projetamos e criamos sites baseados em tecnologias comprovadas. A desenvolver sites na e-Formaliza é a garantia de um trabalho com qualidade
+          p.goal__answer Na e-Formaliza, projetamos e criamos sites baseados em tecnologias comprovadas.  Desenvolver sites na e-Formaliza é a garantia de um trabalho com qualidade
       
 
 
