--- a/src/components/discount/discount.pug
+++ b/src/components/discount/discount.pug
@@ -4,7 +4,8 @@
     .discount__image 
       img(src=require("../../../images/fire.png"), alt="sale")
     .discount__timer.timer
-      p.timer__text até o dia 31 de maio MAIO GANHE UM DESCONTO PROMOCIONAL de 20% para nossos serviços
+      p.timer__text ATÉ 31 DE MAIO MAIO, GANHE DESCONTO PROMOCIONAL DE 10% EM TODOS OS NOSSOS SERVIÇOS
+      
       p.timer__time 21:13:32
       a.timer__title(href="#ask") 
         p &#11166;  Clique para o primeiro passo! A concorrência já está online e você?  &#11164;
