--- a/src/components/goal/goal.scss
+++ b/src/components/goal/goal.scss
@@ -5,10 +5,10 @@
   color: white;
   font-family: $font-family-title;
   font-size: 2em;
-  text-shadow: 0 0 5px red;
+  // text-shadow: 0 0 5px red;
   font-family: $font-family-title, sans-serif;
   font-weight: 700;
-  letter-spacing: 0.07em;
+  // letter-spacing: 0.07em;
   text-transform: uppercase;
 
   &__wrapper {
@@ -25,8 +25,8 @@
     img {
       width: 100%;
       border-radius: 10px;
-      border: 1px solid rgb(129, 7, 7);
-      box-shadow: 0 0 10px rgb(129, 7, 7);
+      // border: 1px solid rgb(129, 7, 7);
+      // box-shadow: 0 0 10px rgb(129, 7, 7);
     }
   }
 
@@ -49,7 +49,8 @@
     justify-content: space-between;
     // background-color: $colorBlack;
     margin-bottom: 20px;
-    font-size: 0.8em;
+    // font-size: 0.8em;
+    line-height: 1.5em;
   }
 
   &__question {
@@ -62,13 +63,10 @@
     text-align: left;
     text-shadow: none;
     font-weight: 400;
-    letter-spacing: 0.05em;
+    // letter-spacing: 0.05em;
     width: 90%;
     margin: 20px 0 0 auto;
-    line-height: 1.5em;
-  }
-
-  &__answer::before {
-    content: " - ";
+    font-size: 0.85em;
+   
   }
 }
