--- a/src/components/home/home.pug
+++ b/src/components/home/home.pug
@@ -1,8 +1,8 @@
 .home#home
   .container 
     .home__box
-      .home__greetings.title  
-        p Pensou em sites ? Pensou e-Formaliza 
+      .home__greetings 
+        p Pensou em sites ? Pensou e-Formaliza
       .home__row 
         .home__column
           p.home__title Criamos sites modernos
