--- a/src/components/offers/offers.pug
+++ b/src/components/offers/offers.pug
@@ -6,15 +6,15 @@
         li.offers__item.offer
           button.offer__btn(type="button") Seu Amigo Vale Desconto
           .offer__description 
-            p Você indica nós ao seu amigo e ganham 10% de desconto em todos os serviços do site !
+            p Seu amigo contrata conosco website,  vocês dois ganham 10% de desconto em todos os serviços do site !
         li.offers__item.offer
-          button.offer__btn(type="button") Seu Manutenção Gratis
+          button.offer__btn(type="button") Sua Manutenção Gratis
           .offer__description 
-            p Contrate nossos serviços de desenvolvimento ate o dia 31 de maio e ganhe 06 meses de manutenção gratis !
+            p Contrate nossos serviços de desenvolvimento até o dia 31 de maio e ganhe 06 meses de manutenção gratis !
         li.offers__item.offer
           button.offer__btn(type="button") Cadastro Google
           .offer__description 
-            p Fechando a contratação de até o dia 31 de maio ganhe o cadastro de sua empresa no Google gratuitamente !
+            p Fechando sua contratação de até o dia 31 de maio, o cadastro de sua empresa no Google será realizado gratuitamente !
       .offers__image
         img(src=require("../../../images/money.png"), alt="promotion")
 
