added promovemos section

--- a/src/components/ask/ask.pug
+++ b/src/components/ask/ask.pug
@@ -15,6 +15,6 @@
           label(for="name") Seu email
         .form__input
           input(type="email" placeholder="email" name="email")
-        button.form__btn(type="submit") Solicitar!  
+        button.form__btn.btn(type="submit") Solicitar!  
       .ask__image
         img(src=require("../../../images/student_asking_question.svg"), alt="ask")
