--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -4,11 +4,11 @@ header.header
       img.header__logo.logo(src=require("../../../images/logo_eformaliza_red_black.svg"), alt="eformaliza")
     nav.header__nav 
       .header__list
-        a.header__item(href="index.html") Home
+        a.header__item(href="#home") Home
         a.header__item(href="criamos.html") Criamos      
-        a.header__item(href="promovemos.html") Promovemos
-        a.header__item(href="./index.html") Blog
-        a.header__item(href="./index.html") FAQ
+        a.header__item(href="#promotion") Promovemos
+        a.header__item(href="blog.html") Blog
+        a.header__item(href="faq.html") FAQ
         a.header__item(href="#contacts") Contatos
     nav.header__nav_burger
       .burger__inner  
