--- a/src/faq.pug
+++ b/src/faq.pug
@@ -7,16 +7,18 @@ html(lang="en")
     //- meta(name="description" content="Data Warehouse is a data storage area that has been tested for security, so you can store your data here safely but not be afraid of being stolen by others." )
     //- meta(name="keywords" content="warehouse, save, data, security, storage, area" )
     //- link(rel="icon" href="favicon.ico" type="image/x-icon")
-    title Promovemos
+    title FAQ
   body
     include components/header/header
     //- include components/home/home
     //- include components/ask/ask
     //- include components/discount/discount
     include components/footer/footer
+    include components/footer/footer
+    include components/footer/footer
     //- include components/product/product
     //- include components/services/services 
-    //- include components/obras/obras 
+    include components/obras/obras 
     //- include components/opinions/opinions 
     //- include components/goal/goal
    
