--- a/src/index.pug
+++ b/src/index.pug
@@ -5,10 +5,11 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title e-Formaliza
-  body
+  body#home
     include components/header/header
     include components/home/home
     include components/goal/goal
+    include components/promotion/promotion
     include components/offers/offers
     include components/discount/discount
     include components/ask/ask
