--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,7 @@
 @use "../components/product/product";
 @use "../components/offers/offers";
 @use "../components/footer/footer";
+@use "../components/promotion/promotion";
 
 //import fonts and variables
 @import "fonts";
