--- a/src/components/ask/ask.scss
+++ b/src/components/ask/ask.scss
@@ -59,18 +59,25 @@
     }
 
     &__btn {
-      background-color: rgb(233, 15, 15);
-      padding: 5px 10px;
-      border-radius: 5px;
-      font-weight: 600;
-      font-size: 0.8em;
       margin: 30px 0;
     }
-
-    &__btn:hover {
-      box-shadow: 0 0 7px White;
-    }
   }
+}
+
+.btn {
+  color: white;
+  background-color: rgb(233, 15, 15);
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-weight: 600;
+  font-size: 22px;
+  font-family: $font-family-subtitle,sans-serif;
+  width: fit-content;
+}
+
+
+.btn:hover {
+  box-shadow: 0 0 7px White;
 }
 
 @media (max-width: 883px) {
