--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -7,7 +7,7 @@ footer.footer#contacts
         p 21-99936-5384
       .footer__item
         img(src=require("../../../images/icons/email.svg"), alt="email")
-        p eformaliza@gmail.com
+        p contato@eformaliza.com
       a.footer__item(href= "https://www.instagram.com/eformaliza/") 
         img(src=require("../../../images/icons/instagram.svg"), alt="instagram")
         p @eformaliza
