--- a/src/criamos.pug
+++ b/src/criamos.pug
@@ -7,7 +7,7 @@ html(lang="en")
     //- meta(name="description" content="Data Warehouse is a data storage area that has been tested for security, so you can store your data here safely but not be afraid of being stolen by others." )
     //- meta(name="keywords" content="warehouse, save, data, security, storage, area" )
     //- link(rel="icon" href="favicon.ico" type="image/x-icon")
-    title Eformaliza
+    title Criamos
   body
     include components/header/header
     //- include components/home/home
