criamos to change icons

--- a/src/components/creation/creation.pug
+++ b/src/components/creation/creation.pug
@@ -1,8 +1,42 @@
-.creation
+.creation#creation
   .container
- 
+    .creation__title.title Criamos
+    .creation__row  
+      .creation__item.item
+        .item__img
+          img(src=require("../../../images/icons/facebook-red.svg"), alt="facebook")
+        .item__description Desenho Gráfico
+      .creation__item.item
+        .item__img
+          img(src=require("../../../images/icons/instagram-red.svg"), alt="instagram")
+        .item__description Websites Profissionais
+      .creation__item.item
+        .item__img
+          img(src=require("../../../images/icons/instagram-red.svg"), alt="instagram")
+        .item__description Blogs
+    .creation__title.title Serviços
+    .creation__row
+      .creation__item.item
+        .item__img
+          img(src=require("../../../images/icons/google-business-red.svg"), alt="google-business")
+        .item__description Manutenção de Websites
+      .creation__item.item
+        .item__img
+          img(src=require("../../../images/icons/facebook-red.svg"), alt="facebook")
+        .item__description Assesoramento com Domínios e Hospedagens
+      .creation__item.item
+        .item__img
+          img(src=require("../../../images/icons/instagram-red.svg"), alt="instagram")
+        .item__description Serviços de Programação Front-End
+    .creation__box
+      .creation__question O que garantimos ?
+      .creation__about
+        ul 
+          li Suporte técnico
+          li Desenvolvimento de funcionalidades
+          li Consultoria
+    a.creation__btn.btn(href="#ask") Saiba mais!
       
-
 
     
     
