--- a/src/components/promotion/promotion.pug
+++ b/src/components/promotion/promotion.pug
@@ -4,10 +4,6 @@
     .promotion__row  
       .promotion__item.item
         .item__img
-          img(src=require("../../../images/icons/facebook-red.svg"), alt="facebook")
-        .item__description Gerenciamento Facebook
-      .promotion__item.item
-        .item__img
           img(src=require("../../../images/icons/instagram-red.svg"), alt="instagram")
         .item__description Gerenciamento Instagram
       .promotion__item.item 
@@ -15,9 +11,8 @@
           img(src=require("../../../images/icons/google-business-red.svg"), alt="google-business")
         .item__description Cadastro no Google    
     .promotion__box 
-      p.promotion__text Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae rem, architecto cum reprehenderit enim possimus facilis libero error dolore ducimus nisi itaque ab natus quae eius nihil praesentium obcaecati id.
-      p.promotion__text Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ipsum hic at et ratione veritatis amet quidem delectus magni quam, incidunt alias unde ut quod magnam consequuntur cum illo non?
-      p.promotion__text Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ut perferendis earum vel quam fugiat accusamus voluptatibus atque, veritatis non, facilis voluptates quisquam harum modi vitae cumque reprehenderit rem aperiam!
+      p.promotion__text Aproveite o conhecimento da e-Formaliza ter o seu Instagram gerenciado por nossa empresa aumentará o reconhecimento de sua marca e economizará seu valioso tempo redirecionando-a para Gestão do seu Negócio.
+      p.promotion__text O cartão de visitas no Google, além de muitas vantagens, aumentará a visibilidade de sua empresa na web, também é fonte adicional de visitas e permite integração com novos usuários e novos clientes, através de comentários e avaliações. Não se preocupe com isso, deixe que a e-Formaliza faça este cadastro por você.
     a.promotion__btn.btn(href="#ask") Saiba mais!  
       
 
