--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,6 +12,7 @@
 @use "../components/offers/offers";
 @use "../components/footer/footer";
 @use "../components/promotion/promotion";
+@use "../components/creation/creation";
 
 //import fonts and variables
 @import "fonts";
