--- a/src/components/creation/creation.scss
+++ b/src/components/creation/creation.scss
@@ -1,5 +1,85 @@
 @import "../../styles/variables";
 
+
+.item {
+  margin: 0 30px;
+  text-align: center;
+  flex: 0 1 25%;
+
+
+  &__img {
+    margin: 0 auto;
+    width: 160px;
+    height: 160px;
+    overflow: hidden;
+    background-color: $colorBlack;
+    border-radius: 30px;
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  &__description {
+    color: white;
+    font-family: $font-family-subtitle, sans-serif;
+    font-size: 1.8em;
+    margin: 40px 0 0;
+    line-height: 1.5em;
+  }
+}
 .creation {
-  
+  // background-image: url("../../images/fundo_leve1.jpg");
+  // background-position: center;
+  // background-size: cover;
+  // background-repeat: repeat-x;
+  background-color: black;
+  padding: 30px 0 0;
+  color: white;
+
+  &__title{
+
+  }
+
+  &__row {
+    margin: 40px 0 0;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 5px;
+    justify-content: center;
+  }
+
+  &__box {
+    padding: 10px 30px;
+    display: flex;
+    font-size: 2em;
+    font-family: $font-family-subtitle, sans-serif;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+    line-height: 2.1em;
+    font-weight: 600;
+  }
+
+  &__question {
+    padding: 20px;
+    flex: 0 1 30%;
+   
+
+  }
+
+  &__about {
+    padding: 20px 20px 20px 100px;
+    flex: 0 1 70%;
+   
+    li:before {
+      content: "\00B7      ";
+    
+    }
+  }
+  &__btn {
+    margin: 0 auto 40px;
+    display: block;
+  }
+
+
 }
