--- a/src/components/goal/goal.scss
+++ b/src/components/goal/goal.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables";
 
 .goal {
-  background-color: black;
+  background-color: $colorBlack;
   color: white;
   font-family: $font-family-title;
   font-size: 2em;
