--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -5,10 +5,10 @@ header.header
     nav.header__nav 
       .header__list
         a.header__item(href="#home") Home
-        a.header__item(href="criamos.html") Criamos      
+        a.header__item(href="#creation") Criamos      
         a.header__item(href="#promotion") Promovemos
-        a.header__item(href="blog.html") Blog
-        a.header__item(href="faq.html") FAQ
+        a.header__item(href="index.html") Blog
+        a.header__item(href="index.html") FAQ
         a.header__item(href="#contacts") Contatos
     nav.header__nav_burger
       .burger__inner  
