--- a/src/components/promotion/promotion.scss
+++ b/src/components/promotion/promotion.scss
@@ -16,6 +16,7 @@
     display: flex;
     padding: 5px;
     justify-content: center;
+    
   }
 
   &__box {
@@ -38,9 +39,10 @@
 }
 
 .item {
-  margin: 0 40px;
+  padding: 30px 0;
   text-align: center;
   flex: 0 1 25%;
+  
 
 
   &__img {
