--- a/src/index.pug
+++ b/src/index.pug
@@ -9,6 +9,7 @@ html(lang="en")
     include components/header/header
     include components/home/home
     include components/goal/goal
+    include components/creation/creation
     include components/promotion/promotion
     include components/offers/offers
     include components/discount/discount
