second edition Home page / to change production images

--- a/src/components/ask/ask.scss
+++ b/src/components/ask/ask.scss
@@ -8,7 +8,7 @@
   font-family: $font-family-title, sans-serif;
   line-height: 1.5em;
 
-  padding-top: 60px;
+  padding: 50px 0 10px;
 
   &__title {
     font-size: 1em;
