--- a/src/components/creation/creation.pug
+++ b/src/components/creation/creation.pug
@@ -8,13 +8,13 @@
         .item__description Desenho Gráfico
       .creation__item.item
         .item__img
-          img(src=require("../../../images/icons/instagram-red.svg"), alt="instagram")
+          img(src=require("../../../images/icons/bolos/coding.svg"), alt="instagram")
         .item__description Websites Profissionais
       .creation__item.item
         .item__img
           img(src=require("../../../images/icons/instagram-red.svg"), alt="instagram")
-        .item__description Blogs
-    .creation__title.title Serviços
+        .item__description Cartões de Visita Virtuais
+    .creation__title.title Serviços relacionados
     .creation__row
       .creation__item.item
         .item__img
