--- a/src/components/offers/offers.pug
+++ b/src/components/offers/offers.pug
@@ -6,7 +6,7 @@
         li.offers__item.offer
           button.offer__btn(type="button") Seu Amigo Vale Desconto
           .offer__description 
-            p Seu amigo contrata conosco website,  vocês dois ganham 10% de desconto em todos os serviços do site !
+            p Seu amigo contratando conosco website, vocês dois ganham 10% de desconto em todos os nossos serviços !
         li.offers__item.offer
           button.offer__btn(type="button") Sua Manutenção Gratis
           .offer__description 
