--- a/src/components/promotion/promotion.pug
+++ b/src/components/promotion/promotion.pug
@@ -11,8 +11,8 @@
           img(src=require("../../../images/icons/google-business-red.svg"), alt="google-business")
         .item__description Cadastro no Google    
     .promotion__box 
-      p.promotion__text Aproveite o conhecimento da e-Formaliza ter o seu Instagram gerenciado por nossa empresa aumentará o reconhecimento de sua marca e economizará seu valioso tempo redirecionando-a para Gestão do seu Negócio.
-      p.promotion__text O cartão de visitas no Google, além de muitas vantagens, aumentará a visibilidade de sua empresa na web, também é fonte adicional de visitas e permite integração com novos usuários e novos clientes, através de comentários e avaliações. Não se preocupe com isso, deixe que a e-Formaliza faça este cadastro por você.
+      p.promotion__text Gerenciamento do seu Instagram por especialista com esperiência aumentará o reconhecimento de sua marca e economizará seu valioso tempo redirecionando-o para gestão do seu negócio
+      p.promotion__text O cadastro da sua empresa no Google, aumentará a visibilidade de sua empresa na WEB, será o fonte adicional de visitas de novos usuários e clientes, através de comentários e avaliações. 
     a.promotion__btn.btn(href="#ask") Saiba mais!  
       
 
