--- a/src/components/promotion/promotion.scss
+++ b/src/components/promotion/promotion.scss
@@ -5,7 +5,7 @@
   background-position: center;
   background-size: cover;
   background-repeat: repeat-x;
-  padding: 30px 0 0;
+  padding: 50px 0 20px;
 
   &__title{
 
