--- a/src/styles/_container.scss
+++ b/src/styles/_container.scss
@@ -23,3 +23,5 @@
   border: 1px solid rgb(129, 7, 7);
   box-shadow: 0 0 5px rgb(129, 7, 7);
 }
+
+// to rename for generic, to add btn, correct title
