--- a/src/components/creation/creation.pug
+++ b/src/components/creation/creation.pug
@@ -4,29 +4,29 @@
     .creation__row  
       .creation__item.item
         .item__img
-          img(src=require("../../../images/icons/facebook-red.svg"), alt="facebook")
+          img(src=require("../../../images/icons/bolos/design.svg"), alt="web-design")
         .item__description Desenho Gráfico
       .creation__item.item
         .item__img
-          img(src=require("../../../images/icons/bolos/coding.svg"), alt="instagram")
+          img(src=require("../../../images/icons/bolos/webPage.svg"), alt="web")
         .item__description Websites Profissionais
       .creation__item.item
         .item__img
-          img(src=require("../../../images/icons/instagram-red.svg"), alt="instagram")
+          img(src=require("../../../images/icons/bolos/card.svg"), alt="card")
         .item__description Cartões de Visita Virtuais
     .creation__title.title Serviços relacionados
     .creation__row
       .creation__item.item
         .item__img
-          img(src=require("../../../images/icons/google-business-red.svg"), alt="google-business")
+          img(src=require("../../../images/icons/bolos/maintenance.svg"), alt="maintenance")
         .item__description Manutenção de Websites
       .creation__item.item
         .item__img
-          img(src=require("../../../images/icons/facebook-red.svg"), alt="facebook")
+          img(src=require("../../../images/icons/bolos/www.svg"), alt="hosting")
         .item__description Assesoramento com Domínios e Hospedagens
       .creation__item.item
         .item__img
-          img(src=require("../../../images/icons/instagram-red.svg"), alt="instagram")
+          img(src=require("../../../images/icons/bolos/coding.svg"), alt="coding")
         .item__description Serviços de Programação Front-End
     .creation__box
       .creation__question O que garantimos ?
