--- a/src/components/promotion/promotion.pug
+++ b/src/components/promotion/promotion.pug
@@ -11,8 +11,8 @@
           img(src=require("../../../images/icons/google-business-red.svg"), alt="google-business")
         .item__description Cadastro no Google    
     .promotion__box 
-      p.promotion__text Gerenciamento do seu Instagram por especialista com esperiência aumentará o reconhecimento de sua marca e economizará seu valioso tempo redirecionando-o para gestão do seu negócio
-      p.promotion__text O cadastro da sua empresa no Google, aumentará a visibilidade de sua empresa na WEB, será o fonte adicional de visitas de novos usuários e clientes, através de comentários e avaliações. 
+      p.promotion__text O Gerenciamento de seu Instagram por especialistas com experiência aumentará o reconhecimento de sua marca e economizará seu tempo, redirecionando-o para gestão do seu negócio
+      p.promotion__text O cadastro no Google, aumentará a visibilidade de sua empresa na WEB e será fonte adicional para visitas de novos usuários e clientes, através de comentários e avaliações. 
     a.promotion__btn.btn(href="#ask") Saiba mais!  
       
 
