--- a/src/components/promotion/promotion.scss
+++ b/src/components/promotion/promotion.scss
@@ -43,9 +43,9 @@
   text-align: center;
   flex: 0 1 25%;
   
-
-
   &__img {
+    // border: 1px solid white;
+    padding: 15px;
     margin: 0 auto;
     width: 160px;
     height: 160px;
@@ -53,6 +53,7 @@
     background-color: $colorBlack;
     border-radius: 30px;
     img {
+     
       width: 100%;
       height: 100%;
     }
