--- a/src/index.pug
+++ b/src/index.pug
@@ -10,6 +10,7 @@ html(lang="en")
     include components/home/home
     include components/goal/goal
     include components/creation/creation
+    include components/portfolio/portfolio
     include components/promotion/promotion
     include components/offers/offers
     include components/discount/discount
