--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,10 +5,9 @@
 @use "../components/ask/ask";
 @use "../components/discount/discount";
 @use "../components/goal/goal";
-@use "../components/services/services";
-@use "../components/opinions/opinions";
-@use "../components/obras/obras";
-@use "../components/product/product";
+// @use "../components/services/services";
+@use "../components/portfolio/portfolio";
+// @use "../components/obras/obras";
 @use "../components/offers/offers";
 @use "../components/footer/footer";
 @use "../components/promotion/promotion";
