--- a/src/components/creation/creation.scss
+++ b/src/components/creation/creation.scss
@@ -1,11 +1,9 @@
 @import "../../styles/variables";
 
-
 .item {
   margin: 0 30px;
   text-align: center;
   flex: 0 1 25%;
-
 
   &__img {
     margin: 0 auto;
@@ -30,7 +28,7 @@
 }
 .creation {
   background-color: black;
-  padding: 50px 0 0;
+  padding: 50px 0;
   color: white;
 
   &__title{
@@ -38,7 +36,7 @@
   }
 
   &__row {
-    margin: 40px 0 0;
+    margin: 50px 0;
     display: flex;
     flex-wrap: wrap;
     padding: 5px;
@@ -55,6 +53,7 @@
     margin: 0 auto 30px;
     line-height: 2.1em;
     font-weight: 600;
+
   }
 
   &__question {
@@ -74,9 +73,8 @@
     }
   }
   &__btn {
-    margin: 0 auto 40px;
+    margin: 0 auto;
     display: block;
   }
-
 
 }
