--- a/src/components/discount/discount.scss
+++ b/src/components/discount/discount.scss
@@ -8,9 +8,10 @@
   color: #ffffff;
   text-align: center;
   font-family: $font-family-subtitle, sans-serif;
+  padding-top: 10px;
 
   &__title {
-    margin: 90px auto 0;
+    margin: 60px auto 0;
     font-size: 3.2em;
   }
 
@@ -57,7 +58,7 @@
     font-size: 2em;
     text-transform: uppercase;
     width: fit-content;
-    padding: 7px;
+    padding: 3px;
     margin: 0 auto;
     transition: all 0.3s linear 0.1s;
     line-height: 1.3em;
@@ -69,8 +70,8 @@
     transform: scale(1.05);
     text-shadow: 0 0 2px white;
     transition: all 0.3s linear 0.1s;
-    border-top: 1px solid white;
-    border-bottom: 1px solid white;
+    border-top: 2px solid white;
+    border-bottom: 2px solid white;
   }
   
 }
