changed footer icons

--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -3,16 +3,16 @@ footer.footer#contacts
     p.footer__title.title Contatos
     .footer__row
       .footer__item
-        img(src=require("../../../images/icons/whatsapp.svg"), alt="whatsapp")
+        img(src=require("../../../images/icons/new-footer-icons/whatsapp.svg"), alt="whatsapp")
         p 21-99936-5384
       .footer__item
-        img(src=require("../../../images/icons/email.svg"), alt="email")
+        img(src=require("../../../images/icons/new-footer-icons/mail.svg"), alt="email")
         p contato@eformaliza.com
       a.footer__item(href= "https://www.instagram.com/eformaliza/") 
-        img(src=require("../../../images/icons/instagram.svg"), alt="instagram")
+        img(src=require("../../../images/icons/new-footer-icons/instagram.svg"), alt="instagram")
         p @eformaliza
       a.footer__item(href="https://facebook.com") 
-        img(src=require("../../../images/icons/facebook.svg"), alt="facebook")
+        img(src=require("../../../images/icons/new-footer-icons/facebook.svg"), alt="facebook")
         p facebook
 
   
