added slides to portfolio

--- a/src/components/portfolio/portfolio.pug
+++ b/src/components/portfolio/portfolio.pug
@@ -7,9 +7,19 @@
       .swiper-wrapper
         //Slides
         .swiper-slide
+          img(src=require("../../../images/oliveira.jpg"), alt="projetos realizados")
         .swiper-slide
+          img(src=require("../../../images/margarita.jpg"), alt="projetos realizados")
         .swiper-slide
+          img(src=require("../../../images/honda.jpg"), alt="projetos realizados")
         .swiper-slide
+          img(src=require("../../../images/iphone.jpg"), alt="projetos realizados")
+        .swiper-slide
+          img(src=require("../../../images/evraz.jpg"), alt="projetos realizados")
+        .swiper-slide
+          img(src=require("../../../images/ozone.jpg"), alt="projetos realizados")
+        .swiper-slide
+          img(src=require("../../../images/quiz.jpg"), alt="projetos realizados")
       //pagination
       .swiper-pagination
     //navigation buttons
