--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,5 @@
 //components styles
-@use "./container";
+@use "./generic";
 @use "../components/header/header";
 @use "../components/home/home";
 @use "../components/ask/ask";
