--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -44,20 +44,19 @@
     // margin: 40px;
 
     .swiper-slide {
+      
       margin: 20px 0;
-      background-image: url("../../images/margarita.jpg");
-      background-position: center;
-      background-size: cover;
       height: 350px;
       overflow: hidden;
       border: 7px solid $colorBlack;
       border-radius: 40px;
-      // // padding: 15px;
-      // text-align: center;
-      // display: flex;
-      // flex-direction: column;
-      // justify-content: center;
       transition: all 0.3s linear 0.1s;
+      display: flex;
+      img {
+        display: block;
+
+        width: 100%;
+      }
     }
     .swiper-slide:hover {
       transition: all 0.3s linear 0.1s;
@@ -66,30 +65,6 @@
       cursor: grabbing;
     }
   }
-
-  // &-opinion {
-  //   font-family: $font-family-description, sans-serif;
-  //   line-height: 1.4em;
-  //   font-size: 1.3em;
-  //   flex: 1 1 auto;
-  // }
-  // &-opinion:before,
-  // &-opinion:after {
-  //   content: ' " ';
-  // }
-
-  // &-client {
-  //   text-transform: uppercase;
-  //   margin: 10px auto;
-  //   font-family: julian, sans-serif;
-  //   font-size: 1.2em;
-  // }
-
-  // &-city {
-  //   text-transform: capitalize;
-  //   font-weight: 700;
-  //   font-size: 1.1em;
-  // }
 
   &-pagination {
   
