first edition desktop finished

--- a/src/components/home/home.pug
+++ b/src/components/home/home.pug
@@ -12,4 +12,5 @@
             li Garantia de 03 meses
             li Avaliação individual gratuita
         .home__column
-          iframe.home__video(width="840" height="480" src="https://www.youtube.com/embed/9LySJWfskT4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+          iframe.home__video(width="853" height="480" src="https://www.youtube.com/embed/p5FUE9UvYbs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+          
