--- a/src/components/portfolio/portfolio.pug
+++ b/src/components/portfolio/portfolio.pug
@@ -20,6 +20,8 @@
           img(src=require("../../../images/ozone.jpg"), alt="projetos realizados")
         .swiper-slide
           img(src=require("../../../images/quiz.jpg"), alt="projetos realizados")
+        .swiper-slide
+          img(src=require("../../../images/sinergia.jpg"), alt="projetos realizados")
       //pagination
       .swiper-pagination
     //navigation buttons
