mobile header started

--- a/src/faq.pug
+++ b/src/faq.pug
@@ -9,17 +9,16 @@ html(lang="en")
     //- link(rel="icon" href="favicon.ico" type="image/x-icon")
     title FAQ
   body
-    include components/header/header
-    //- include components/home/home
-    //- include components/ask/ask
-    //- include components/discount/discount
-    include components/footer/footer
-    include components/footer/footer
-    include components/footer/footer
-    //- include components/product/product
-    //- include components/services/services 
-    include components/obras/obras 
-    //- include components/opinions/opinions 
-    //- include components/goal/goal
+    //- include components/header/header
+    //- //- include components/home/home
+    //- //- include components/ask/ask
+    //- //- include components/discount/discount
+    //- include components/footer/footer
+    //- include components/footer/footer
+    //- include components/footer/footer
+    //- //- include components/product/product
+    //- //- include components/services/services 
+    //- //- include components/opinions/opinions 
+    //- //- include components/goal/goal
    
     
