--- a/src/components/ask/ask.scss
+++ b/src/components/ask/ask.scss
@@ -79,22 +79,22 @@
   box-shadow: 0 0 7px White;
 }
 
-@media (max-width: 883px) {
-  .home {
-    &__description {
-      line-height: 1.2em;
-    }
-  }
-}
-@media (max-width: 700px) {
-  .home {
-    padding-top: 400px;
-    height: 100vh;
+// @media (max-width: 883px) {
+//   .home {
+//     &__description {
+//       line-height: 1.2em;
+//     }
+//   }
+// }
+// @media (max-width: 700px) {
+//   .home {
+//     padding-top: 400px;
+//     height: 100vh;
 
-    &__box {
-      padding: 0;
-      font-size: 1.4em;
-      line-height: 1.2em;
-    }
-  }
-}
+//     &__box {
+//       padding: 0;
+//       font-size: 1.4em;
+//       line-height: 1.2em;
+//     }
+//   }
+// }
