--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -57,48 +57,48 @@
   }
 }
 
-@media (max-width: 1290px) {
-  .footer {
-    &__row {
-      flex-wrap: wrap;
-    }
+// @media (max-width: 1290px) {
+//   .footer {
+//     &__row {
+//       flex-wrap: wrap;
+//     }
 
-    &__item {
-      flex: 0 0 40%;
-      margin: 0 30px 10px;
-    }
-  }
-}
+//     &__item {
+//       flex: 0 0 40%;
+//       margin: 0 30px 10px;
+//     }
+//   }
+// }
 
-@media (max-width: 700px) {
-  .footer {
-    &__logo {
-      bottom: 40px;
-      left: 15px;
-      img {
-        width: 140px;
-      }
-    }
+// @media (max-width: 700px) {
+//   .footer {
+//     &__logo {
+//       bottom: 40px;
+//       left: 15px;
+//       img {
+//         width: 140px;
+//       }
+//     }
 
-    &__row {
-      margin: 25px auto 50px;
-      justify-content: center;
-      width: 100%;
-    }
+//     &__row {
+//       margin: 25px auto 50px;
+//       justify-content: center;
+//       width: 100%;
+//     }
 
-    &__item {
-      flex: 0 0 70%;
-      margin: 0 auto 5px;
-      height: 40px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      p {
-        font-size: 1.1em;
-      }
-      img {
-        height: 70%;
-      }
-    }
-  }
-}
+//     &__item {
+//       flex: 0 0 70%;
+//       margin: 0 auto 5px;
+//       height: 40px;
+//       display: flex;
+//       align-items: center;
+//       justify-content: center;
+//       p {
+//         font-size: 1.1em;
+//       }
+//       img {
+//         height: 70%;
+//       }
+//     }
+//   }
+// }
