--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,17 +1,13 @@
 @import "../../styles/variables";
 
-body.lock {
-  overflow: hidden;
-}
-
 .header {
   transition: all 0.8s linear 0.05s;
   display: block;
   position: fixed;
   width: 100%;
-  // background-color: $colorSecondary;
   text-align: center;
   z-index: 300;
+ 
 
   img.logo {
     transition: all 0.8s linear 0.05s;
@@ -19,13 +15,14 @@ body.lock {
     display: block;
     height: 180px;
     padding: 0 0 15px;
-    margin-right: 40px;
-    // border: 1px solid white;
     z-index: 151;
     position: relative;
+   
+    
   }
   img.header__logo_scroll {
     display: none;
+    
   }
 
   &__nav {
@@ -37,6 +34,7 @@ body.lock {
     line-height: 0.7em;
     font-family: $font-family-subtitle, sans-serif;
   }
+
   &__nav::before {
     content: "";
     color: #fff;
@@ -75,26 +73,24 @@ body.lock {
     transition: all 0.3s linear 0.1s;
     border-top: 1px solid white;
     border-bottom: 1px solid white;
-    // border-radius: 20px;
-    // box-shadow: 0 0px 3px $colorTertiary, 0 0px 5px white;
   }
 
   &__nav_burger {
     display: none;
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     position: absolute;
     transition: all 0.8s linear 0.05s;
-    top: 35px;
-    right: 10%;
+    top: 20px;
+    right: 12%;
 
     .burger__inner {
-      background-color: #000;
+      background-color: white;
       height: 4px;
-      width: 100%;
-      margin: 50% 0;
+      width: 70%;
+      margin: 50% 0 50% auto;
       transform: translateY(-50%);
-      box-shadow: 0 4px 8px $colorTertiary;
+      box-shadow: 0 0 2px white, 0 0 3px red;
       transition: all 0.8s linear 0.05s;
     }
   }
@@ -105,9 +101,9 @@ body.lock {
     display: block;
     height: 4px;
     width: 100%;
-    background-color: #000;
+    background-color: white;
     position: absolute;
-    box-shadow: 0 4px 8px $colorTertiary;
+    box-shadow: 0 0 2px white, 0 0 3px red;
   }
 
   &__nav_burger::before {
@@ -118,43 +114,50 @@ body.lock {
   &__nav_burger::after {
     transition: all 0.8s linear 0.05s;
     bottom: 0;
+    right: 0;
+    width: 30%;
+    
   }
 }
 
 .scroll.header {
-  background-color: $colorSecondary;
+  background-color: rgba(53, 53, 53, 0.95);
   transition: all 0.8s linear 0.05s;
   position: fixed;
   width: 100%;
   z-index: 300;
+
   img.logo.scroll {
     transition: all 0.8s linear 0.05s;
-    opacity: 0;
     height: 60px;
     padding: 0 0 7px;
+    opacity: 0;
   }
 
   &__nav {
     transition: all 0.8s linear 0.05s;
-    transform: translateY(15px);
-    // font-size: 1.3em;
+    transform: translateY(18px);
   }
+
   &__nav::before {
     opacity: 1;
     transition: all 0.8s linear 0.05s;
   }
 }
 
-@media (max-width: 1100px) {
+
+
+
+
+ @media (max-width: 1160px) {
   .header {
     img.logo {
-      height: 120px;
-      margin-right: 0;
+      height: 140px;
     }
 
     &__nav {
       transform: translateY(45px);
-      font-size: 1.1em;
+      font-size: 1.3em;
     }
 
     &__item {
@@ -165,17 +168,39 @@ body.lock {
   }
 }
 
+@media (max-width: 950px) {
+  .header {
+    img.logo {
+      height: 120px;
+    }
+
+    &__nav {
+      transform: translateY(45px);
+      font-size: 1.15em;
+    }
+  }
+}
+
+
+
+
+
 @media (max-width: 700px) {
   .header {
     img.logo {
-      height: 100px;
+      height: 90px;
+      opacity: 1;
     }
 
     &__nav_burger {
       display: block;
+      
+      
     }
 
     &__nav_burger.dropped {
+      
+     
       transition: all 0.8s linear 0.05s;
 
       .burger__inner {
@@ -185,28 +210,40 @@ body.lock {
     }
 
     &__nav_burger.dropped::before {
-      transform: translateY(17.5px) rotate(45deg);
+      transform: translate(0, 14.5px) rotate(45deg);
       transition: all 0.8s linear 0.05s;
+  
     }
 
     &__nav_burger.dropped::after {
-      transform: translateY(-17.5px) rotate(-45deg);
+      transform: translate(0, -16px) rotate(-45deg);
+      width: 100%;
       transition: all 0.8s linear 0.05s;
+    
     }
 
     &__nav {
       position: absolute;
       display: block;
-      top: 45px;
-      left: 250%;
+      top: 55px;
+      display: none;
+      
     }
+    &__item:hover {
+      transform: none;
+      text-shadow: none;
+      transition: all 0.3s linear 0.1s;
+      border-top: none;
+      border-bottom: none;
+    }
+
 
     &__list {
       display: block;
-      background-color: #ce4709b9;
-      text-shadow: 0 3px 10px $colorPrimary;
-      box-shadow: 0 5px 5px $colorSecondary;
-      border-radius: 0 0 50% 50%;
+      background-color: $colorBlack;
+      // text-shadow: 0 3px 10px $colorPrimary;
+      // box-shadow: 0 5px 5px $colorSecondary;
+      // border-radius: 0 0 50% 50%;
       padding-bottom: 15px;
     }
 
@@ -232,11 +269,17 @@ body.lock {
     &__nav {
       width: 100%;
       font-size: 1.5em;
-      line-height: 0.6em;
+      line-height: 2em;
     }
+
 
     &__nav.dropped {
       left: 0;
+      display: block;
+    }
+
+    &__nav.dropped::before {
+      opacity: 0;
     }
 
     &__nav_burger {
@@ -246,6 +289,7 @@ body.lock {
 
     img.logo.scroll {
       height: 80px;
+      opacity: 1;
     }
   }
 }
