--- a/src/styles/_generic.scss
+++ b/src/styles/_generic.scss
@@ -3,11 +3,15 @@
 body {
   background-color: $colorSecondary;
 }
+
+body.lock {
+  overflow: hidden;
+}
+
 .container {
   max-width: 1300px;
   margin: 0 auto;
   padding: 0 20px;
-  // text-shadow: 0 0px 2px $colorTertiary;
 }
 
 .title {
